--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
 	<link rel="stylesheet" href="style.css">
 
-	<script type="text/javascript" src="lib/createStuff.js" defer></script>
-	<script type="text/javascript" src="lib/tween.umd.js"></script>
-
-	<script type="text/javascript" src="helper.js" defer></script>
-	<script type="text/javascript" src="scene.js" defer></script>
-
 	<script src="https://threejs.org/build/three.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/three@0.122.0/build/three.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/three@0.122.0/examples/js/controls/OrbitControls.min.js"></script>
+	<script type="text/javascript" src="lib/tween.umd.js"></script>
+	
+	<script type="text/javascript" src="helper.js" defer></script>
+	<script type="text/javascript" src="createStuff.js" defer></script>
+	<script type="text/javascript" src="scene.js" defer></script>
+	
 </head>
 
 <body>
