--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<!--
-
-		Example adapted for Daniel Rohmer tutorial
-
-		https://imagecomputing.net/damien.rohmer/teaching/2019_2020/semester_1/MPRI_2-39/practice/threejs/content/000_threejs_tutorial/index.html
-
-		J. Madeira - April 2021
-
--->
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title> ICG Project </title>
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/style.css">
 
 	<script src="https://threejs.org/build/three.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/three@0.122.0/build/three.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/three@0.122.0/examples/js/controls/OrbitControls.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/three.interaction@0.2.3/build/three.interaction.js"></script>
-	<script type="text/javascript" src="lib/tween.umd.js"></script>
 	<script type="text/javascript" src="lib/OBJLoader.js"></script>
 	
 	<script type="text/javascript" src="helper.js" defer></script>
@@ -33,7 +22,21 @@
 </head>
 
 <body>
-	<div id="Tag3DScene"> </div>
+	<div class="container">
+		<div id="info" class="boxed">
+			<div class="column">
+				<p>Press <kbd>W</kbd> to go forward </p>
+				<p>Press <kbd>S</kbd> to go backwards</p>
+			</div>
+			<div class="column">
+				<p>Press <kbd>A</kbd> to go left</p>
+				<p>Press <kbd>D</kbd> to go right</p>
+			</div>
+			<p>Press <kbd>Shift</kbd> while moving to activate boost</p>
+			<p>Click <kbd>Mouse</kbd> to change car color</p>
+		</div>
+		<div id="little-town"> </div>
+	</div>
 </body>
 
 </html>
