--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title> ICG Project </title>
 
-	<link rel=“stylesheet” type=“text/css” href=“style.css”>
+	<link rel=“stylesheet” href=“style.css”>
 	
 
 	<script src="https://threejs.org/build/three.js"></script>
