--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 	<title> ICG Project </title>
 
-	<link rel=“stylesheet” type=“text/css” href=“style.css”>
-	
+	<link rel="stylesheet" href="css/style.css">
 
 	<script src="https://threejs.org/build/three.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/three@0.122.0/build/three.min.js"></script>
