--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title> ICG Project </title>
-
-	<link rel=“stylesheet” href=“style.css”>
-	
-
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<title> ICG Project </title>
+		
+		<link rel=“stylesheet” href="css/styles.css">
+		
 	<script src="https://threejs.org/build/three.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/three@0.122.0/build/three.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/three@0.122.0/examples/js/controls/OrbitControls.min.js"></script>
@@ -36,6 +35,7 @@
 			<p>Press <kbd>Shift</kbd> while moving to activate boost</p>
 			<p>Click <kbd>Mouse</kbd> to change car color</p>
 		</div>
+		
 		<div id="little-town"> </div>
 	</div>
 </body>
