--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 			<p>Press <kbd>Shift</kbd> while moving to activate boost</p>
 			<p>Click <kbd>Mouse</kbd> to change car color</p>
-			<p>Drag <kbd>Mouse</kbd> to rotate world</p>
+			<p>Use the <kbd>Mouse/Wheel</kbd> to rotate/zoom world</p>
 		</div>
 		
 		<div id="little-town"> </div>
