--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title> ICG Project </title>
+		<title> Little Town </title>
 		
 		<link rel="stylesheet" href="css/styles.css">
 		
